--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,22 +1,5 @@
 en:
   patients:
-    given_name: "Given Name"
-    middle_name: "Middle Name"
-    family_name: "Last Name"
-    family_name2: "Mother's Maiden Name"
-    full_name: "Name"
-    gender: "Sex"
-    birthdate: "Birth Date"
-    age: "Age"
-    identifier: "National ID"
-    address: "Address"
-    new_patient: "New Patient"
-    show_patient: "Show"
-    edit_patient: "Edit"
-    view_all: "View All"
-    back_to_list: "Back to List"
-    destroy: "Destroy"
-    confirm_destroy: "Are you sure?"
     index:
       title: "Patients"
     new:
@@ -26,11 +9,33 @@ en:
     edit:
       title: "Edit Patient Info"
     form:
+      given_name: "Given Name"
+      middle_name: "Middle Name"
+      family_name: "Last Name"
+      family_name2: "Mother's Maiden Name"
+      full_name: "Name"
+      gender: "Sex"
+      birthdate: "Birth Date"
+      age: "Age"
+      identifier: "SSN"
+      address: "Address"
+      new_patient: "New Patient"
+      show_patient: "Show"
+      edit_patient: "Edit"
+      view_all: "View All"
+      back_to_list: "Back to List"
+      destroy: "Destroy"
+      confirm_destroy: "Are you sure?"
       submit: "Submit"
-      prompt_sex: "Select Sex:"
+      prompt_gender: "Select Sex:"
       day: "Day:"
       month: "Month:"
       year: "Year:"
+    patient:
+      gender: "Sex:"
+      age: "Age:"
+      identifier: "SSN:"
+      address: "Address:"
   accessions:
     drawn_at: "Drawn at"
     received_at: "Received at"
