--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -18,6 +18,9 @@ es:
     canine: "Canino"
     feline: "Felino"
     dialysis: "Diálisis"
+    tabs:
+      patients: "Pacientes"
+      requisitions: "Requisiciones"
     sidebar:
       search_patients: "Buscar pacientes"
       search: "Buscar"
@@ -75,11 +78,17 @@ es:
     form:
       doctor: "Doctor que ordena:"
       labels: "Etiquetas"
-      drawn_at: "Extraído en"
-      drawn_by: "Extraído por"
-      received_at: "Recibido en"
+      drawn_at: "Recolectado el"
+      drawn_by: "Recolectado por"
+      received_at: "Recibido el"
       received_by: "Recibido por"
-      reported_at: "Reportado en"
+      reported_at: "Reportado el"
+      submit: "Guardar Accesión"
+      or: "o"
+      cancel: "Cancelar"
+    tabs:
+      patients: "Pacientes"
+      requisitions: "Requisiciones"
     sidebar:
       year: "año"
       phone: "Tel:"
@@ -140,6 +149,10 @@ es:
         remember_me: "remember me"
     
   flash:
+    login:
+      welcome: "¡Bienvenido "
+      last_login_at: " Su último inico de sesión fue el "
+      last_login_at_format: "%d de %B, a las %I:%M%p"
     create: "Paciente creado exitosamente."
     update: "Paciente actualizado exitosamente."
     destroy: "Paciente borrado exitosamente."
