--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -122,6 +122,7 @@ en:
       enter_results: "Enter Results"
       report: "Report"
       print_report: "Print Report (PDF)"
+      notes: "Notes:"
     form:
       order_details: "Order Details"
       doctor: "Ordering Doctor:"
@@ -148,6 +149,7 @@ en:
       submit: "Save Results"
       or: "or"
       cancel: "Cancel"
+      notes: "Notes:"
     accession:
       accession: "Accession"
       reported_at: "Reported at: "
@@ -196,6 +198,7 @@ en:
       page: "Page"
       of: "of"
       results_of: "Lab Results For:"
+      notes: "Notes:"
     sidebar:
       year: "year"
       phone: "Phone:"
