Fixed sortable list

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -39,7 +39,7 @@ es:
         panels: "Paneles"
         doctors: "Doctores"
         insurance_providers: "Aseguradoras"
-        departments: "Departamentos"
+        departments: "Deptos."
         units: "Unidades"
         reference_ranges: "Rangos"
         lab_test_values: "Valores"
